Better grid style.

--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@
 <body>
   <main>
     <header>
-      <h1>Miluji CSF!</h1>
+      <h1>Miluji CSF</h1>
     </header>
     <section id="tiles">
     </section>
