--- a/index.html
+++ b/index.html
@@ -18,7 +18,10 @@
   <link rel="stylesheet" href="style.css">
   <script src="config.js"></script>
   <script> if ('serviceWorker' in navigator) {
-      navigator.serviceWorker.register('sw.js');
+      navigator.serviceWorker.register('sw.js')
+      .then(function() {
+        console.log('SW registered');
+      });
     };
   </script>
 </head>
